--- a/hmf.html
+++ b/hmf.html
@@ -1,3 +1,5 @@
-<video controls>
+<center>
+<video controls loop height="100%" width="100%">
   <source src="Create Amazing Subway Surfers Videos Effortlessly.mp4">
 </video>
+</center>
