--- a/hmf.html
+++ b/hmf.html
@@ -1,5 +1,5 @@
 <center>
-<video controls loop height="100%" width="100%">
+<video autoplay="muted" controls loop height="100%" width="100%">
   <source src="Create Amazing Subway Surfers Videos Effortlessly.mp4">
 </video>
 </center>
